[package]
name = "game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.1"

[dependencies]
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }

[features]
gl_debug = ["gl/debug"]